fixup! Refactor(web): Remove label wrap from Checkbox, Radio, and Toggle

--- a/packages/web/src/scss/components/Checkbox/_Checkbox.scss
+++ b/packages/web/src/scss/components/Checkbox/_Checkbox.scss
@@ -2,12 +2,12 @@
 //    and therefore bloating the CSS.
 // 2. We need to set the background-color of the non-disabled Checkbox input to initial color when it is hovered
 //    or active, because we need it contrasting with the background color.
+// 3. Make the text selectable
 
 @use 'theme';
 @use '../../theme/form-fields' as form-fields-theme;
 @use '../../tools/form-fields' as form-fields-tools;
 @use '../../tools/svg';
-@use '../../settings/cursors';
 
 $_field-name: 'Checkbox';
 
@@ -91,8 +91,8 @@ $_field-name: 'Checkbox';
 
 .Checkbox--item .Checkbox__validationText,
 .Checkbox--item .Checkbox__helperText {
-    position: relative;
-    z-index: 1;
+    position: relative; // 3.
+    z-index: 1; // 3.
 }
 
 .Checkbox--item:is(.Checkbox--disabled, .Checkbox.is-disabled) {
