--- a/packages/web/src/scss/components/Radio/_Radio.scss
+++ b/packages/web/src/scss/components/Radio/_Radio.scss
@@ -1,10 +1,10 @@
 // 1. We need to set the background-color of the non-disabled Radio input to initial color when it is hovered
 //    or active, because we need it contrasting with the background color.
+// 2. Make the text selectable
 
 @use 'sass:map';
 @use '../../theme/form-fields' as form-fields-theme;
 @use '../../tools/form-fields' as form-fields-tools;
-@use '../../settings/cursors';
 @use 'theme';
 
 $_field-name: 'Radio';
@@ -88,8 +88,8 @@ $_field-name: 'Radio';
 .Radio--item .Radio__helperText {
     @include form-fields-tools.item-helper-text();
 
-    position: relative;
-    z-index: 1;
+    position: relative; // 2.
+    z-index: 1; // 2.
 }
 
 :is(.Radio--disabled, .Radio.is-disabled),
