--- a/packages/web/src/scss/components/Toggle/_Toggle.scss
+++ b/packages/web/src/scss/components/Toggle/_Toggle.scss
@@ -19,16 +19,14 @@ $_field-name: 'Toggle';
 }
 
 .Toggle__text {
-    width: 100%;
+    flex: 1;
     margin-right: form-fields-theme.$inline-field-gap;
 }
 
 .Toggle__label {
     @include form-fields-tools.inline-field-label();
-    @include form-fields-tools.stretch();
 
     position: relative;
-    width: 100%;
 }
 
 .Toggle__label--hidden {
